--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/fontello.css">
     <title>Phonex | Home</title>
   </head>
   <body>
     <header>
       <div class="contenedor">
-        <h1 class="icon-phone-whi" >Phonex Contact Center</h1>
+        <h1 class="icon-phone-bla" >Phonex Contact Center</h1>
         <input type="checkbox" id="menu-bar" name="menu-bar" value="">
         <label class="icon-menu" for="menu-bar"></label>
         <nav class="menu">
@@ -21,11 +22,21 @@
         </nav>
       </div>
     </header>
-    <br>
+    <!-- <br>
     <br>
     <br>
     <div class="banner">
 
-    </div>
+    </div> -->
+    <main>
+      <section class="banner">
+        <img src="images/phonex.png">
+        <div class="contenedor">
+          <h2>Phonex Contact Center</h2>
+          <p>Puedes confiar en nosotros!</p>
+          <a href="#">Leer mas</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
