--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/fontello.css">
     <title>Phonex | Home</title>
   </head>
   <body>
     <header>
       <div class="contenedor">
-        <h1 class="icon-phone-bla" >Phonex Contact Center</h1>
+        <h1 class="icon-phone-bla" >Phonex</h1>
         <input type="checkbox" id="menu-bar" name="menu-bar" value="">
         <label class="icon-menu" for="menu-bar"></label>
         <nav class="menu">
@@ -22,15 +21,9 @@
         </nav>
       </div>
     </header>
-    <!-- <br>
-    <br>
-    <br>
-    <div class="banner">
-
-    </div> -->
     <main>
-      <section class="banner">
-        <img src="images/phonex.png">
+      <section id="banner">
+        <img src="images/cc.jpg">
         <div class="contenedor">
           <h2>Phonex Contact Center</h2>
           <p>Puedes confiar en nosotros!</p>
