Imagenes Parte Media

--- a/index.html
+++ b/index.html
@@ -23,11 +23,37 @@
     </header>
     <main>
       <section id="banner">
-        <img src="images/cc.jpg">
+        <img src="images/ccc.jpg">
         <div class="contenedor">
           <h2>Phonex Contact Center</h2>
           <p>Puedes confiar en nosotros!</p>
           <a href="#">Leer mas</a>
+        </div>
+      </section>
+      <section id="bienvenidos">
+        <h2>Nuestra Historia</h2>
+        <p>Somos una empresa dedicada a brindar servicios de call center/contact center de acuerdo a sus necesidades.
+          Ponemos a su disposición nuestra experiencia en procesos de adquisición y retención de clientes, así como nuestra infraestructura de misión critica 7x24.
+          Dedicamos nuestro esfuerzo a exceder la expectativa del cliente a través del trabajo serio y comprometido pero también creativo e innovador.</p>
+      </section>
+      <section id="blog">
+        <h2>Calidad y Seguridad de la Información</h2>
+        <div class="contenedor">
+          <article>
+            <div style="text-align:center;" ><img src="images/image2.jpg"></div>
+            <h4>Politica</h4>
+            <p>En PHONEX asumimos el compromiso con nuestros clientes de satisfacer plenamente sus requerimientos comerciales y contractuales en el servicio de Call Center a través de personal comprometido y técnicamente competente, que opere conforme a nuestro Sistema Integral de Gestión (SIG) bajo la normatividad ISO 9001:2008 e ISO 27001:2005.</p>
+          </article>
+          <article>
+            <div style="text-align:center;" ><img src="images/image3.jpg"></div>
+            <h4>Promoviendo</h4>
+            <ul>
+                <li>La mejora continua en los procesos a fin de ofrecer servicios oportunos en la atención, solución y operación de sus campañas.</li>
+                <li>La identificación de las amenazas y vulnerabilidades para minimizar los riesgos a los cuales se expone la información.</li>
+                <li>Mantener la implementación de un Sistema de Gestión de Seguridad de la información para la continuidad del negocio, la administración de riesgos y la consolidación de una cultura de seguridad. </li>
+                <li>Preservar la confidencialidad, integridad y disponibilidad de la información que maneje en sus distintas áreas y procesos, con la finalidad de salvaguardar los datos del cliente y de la empresa.</li>
+            </ul>
+          </article>
         </div>
       </section>
     </main>
