--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Dedicamos nuestro esfuerzo a exceder la expectativa del cliente a través del trabajo serio y comprometido pero también creativo e innovador.</p>
       </section>
       <section id="blog">
-        <h2>Calidad y Seguridad de la Información</h2>
+        <h3>Calidad y Seguridad de la Información</h3>
         <div class="contenedor">
           <article>
             <div style="text-align:center;" ><img src="images/image2.jpg"></div>
@@ -54,6 +54,16 @@
                 <li>Preservar la confidencialidad, integridad y disponibilidad de la información que maneje en sus distintas áreas y procesos, con la finalidad de salvaguardar los datos del cliente y de la empresa.</li>
             </ul>
           </article>
+        </div>
+      </section>
+      <section id="banner">
+        <img src="images/contacto_.jpg">
+        <div class="contenedor">
+          <h2>Phonex Contact Center</h2>
+            <p>Dirección: México, D.F. Presa Salinillas #370 1er piso, Col. Loma Hermosa, C.P. 11200.</p>
+            <p>Teléfono: 5420-5000</p>
+            <p>Email: ventas@phonex.com.mx</p>
+            <a href="#">¿Tienes dudas?</a>
         </div>
       </section>
     </main>
