--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           <a href="#">Contacto</a>
           <a href="#">Elastix</a>
           <a href="#">SugarCRM</a>
+          <a class="icon-chat" onclick="window.open('http://189.204.89.162/phchat/lhc_web/index.php/esp/chat/startchat/','nuevaVentana','width=350, height=600')"></a>
+          <a class="icon-phone-whi" onclick="window.open('tellamamos.html','nuevaVentana','width=470, height=420')"></a>
         </nav>
       </div>
     </header>
@@ -38,7 +40,7 @@
       </section>
       <section id="blog">
         <h3>Calidad y Seguridad de la Información</h3>
-        <div class="contenedor">
+        <div class="contenedorr">
           <article>
             <div style="text-align:center;" ><img src="images/image2.jpg"></div>
             <h4>Politica</h4>
@@ -47,12 +49,10 @@
           <article>
             <div style="text-align:center;" ><img src="images/image3.jpg"></div>
             <h4>Promoviendo</h4>
-            <ul>
-                <li>La mejora continua en los procesos a fin de ofrecer servicios oportunos en la atención, solución y operación de sus campañas.</li>
-                <li>La identificación de las amenazas y vulnerabilidades para minimizar los riesgos a los cuales se expone la información.</li>
-                <li>Mantener la implementación de un Sistema de Gestión de Seguridad de la información para la continuidad del negocio, la administración de riesgos y la consolidación de una cultura de seguridad. </li>
-                <li>Preservar la confidencialidad, integridad y disponibilidad de la información que maneje en sus distintas áreas y procesos, con la finalidad de salvaguardar los datos del cliente y de la empresa.</li>
-            </ul>
+                <p>La mejora continua en los procesos a fin de ofrecer servicios oportunos en la atención, solución y operación de sus campañas asi como la identificación de las amenazas y vulnerabilidades para minimizar los riesgos a los cuales se expone la información.
+                Y mantener la implementación de un Sistema de Gestión de Seguridad de la información para la continuidad del negocio,
+                la administración de riesgos y la consolidación de una cultura de seguridad.</p>
+                <!-- <li>Preservar la confidencialidad, integridad y disponibilidad de la información que maneje en sus distintas áreas y procesos, con la finalidad de salvaguardar los datos del cliente y de la empresa.</li> -->
           </article>
         </div>
       </section>
