--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <nav class="menu">
           <a href="#">Inicio</a>
           <a href="#">Contacto</a>
-          <a href="#">Elastix</a>
-          <a href="#">SugarCRM</a>
-          <a class="icon-chat" onclick="window.open('http://189.204.89.162/phchat/lhc_web/index.php/esp/chat/startchat/','nuevaVentana','width=350, height=600')"></a>
-          <a class="icon-phone-whi" onclick="window.open('tellamamos.html','nuevaVentana','width=470, height=420')"></a>
+          <a href="#" onClick="MyWindow=window.open('https://10.10.2.250/','MyWindow','width=1024,height=800'); return false;">Elastix</a>
+          <a href="#" onClick="MyWindow=window.open('https://10.10.2.250/SugarCE','MyWindow','width=1024,height=800'); return false;">SugarCRM</a>
+          <a href="#" class="icon-chat" onclick="window.open('http://189.204.89.162/phchat/lhc_web/index.php/esp/chat/startchat/','nuevaVentana','width=350, height=600')"></a>
+          <a href="#" class="icon-phone-whi" onclick="window.open('tellamamos.html','nuevaVentana','width=470, height=420')"></a>
+          <a href="#" class="icon-user" onclick="window.open('form-envio.html','nuevaVentana','width=530, height=420')"></a>
         </nav>
       </div>
     </header>
@@ -63,7 +64,7 @@
             <p>Dirección: México, D.F. Presa Salinillas #370 1er piso, Col. Loma Hermosa, C.P. 11200.</p>
             <p>Teléfono: 5420-5000</p>
             <p>Email: ventas@phonex.com.mx</p>
-            <a href="#">¿Tienes dudas?</a>
+            <a href="#" onclick="window.open('form-envio.html','nuevaVentana','width=530, height=420')" >¿Tienes dudas?</a>
         </div>
       </section>
     </main>
