--- a/form-envio.html
+++ b/form-envio.html
@@ -2,17 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <title>Email | Form</title>
   </head>
   <body>
-    <form name="frmContacto" method="post" action="sendbymail.php">
+<div class="container">
+  <br>
+  <h1>Dejanos Tus dudas!</h1>
+
+    <form name="frmContacto" method="post" action="model/sendbymail.php">
 <table width="500px">
 <tr>
 <td>
-<label for="first_name">Nombre Completo: *</label>
+  <div class="row">
+    <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+<!-- <label for="first_name">Nombre Completo: *</label> -->
 </td>
 <td>
-<input type="text" name="first_name" maxlength="50" size="25">
+<input class="form-control" placeholder="Nombre Completo" type="text" name="first_name" ><br>
 </td>
 </tr>
 <!-- <tr>
@@ -25,10 +32,10 @@
 </tr> -->
 <tr>
 <td>
-<label for="email">Dirección de E-mail: *</label>
+<!-- <label for="email">Dirección de E-mail: *</label> -->
 </td>
 <td>
-<input type="text" name="email" maxlength="80" size="35">
+<input class="form-control" placeholder="Dirección de E-mail" type="text" name="email" ><br>
 </td>
 </tr>
 <!-- <tr>
@@ -41,17 +48,21 @@
 </tr> -->
 <tr>
 <td>
-<label for="comments">Comentarios: *</label>
+<!-- <label for="comments">Comentarios: *</label> -->
 </td>
 <td>
-<textarea name="comments" maxlength="500" cols="30" rows="5"></textarea>
+<textarea rows="5" class="form-control" type="text" placeholder="Comentarios" name="comments"></textarea><br>
 </td>
 </tr>
+<br>
 <tr>
 <td colspan="2" style="text-align:right">
-<input type="submit" value="Enviar">
+<input class="btn btn-success" type="submit" value="Enviar">
 </td>
 </tr>
+</div>
+</div>
+</div>
 </table>
 </form>
   </body>
